--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11734],[[4,5,6,0,[],[1,48,11675],[[7,8,9,10,[],[1,54,11664],[],[[11,0,0,[],[1,1007,10700],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,506060],[[4,5,6,0,[],[1,42,506013],[[7,8,9,10,[],[1,48,505977],[],[[11,0,0,[],[1,1116,503532],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*MonitoringBuku","*C:\\QA\\MonitoringBuku","*..","*Tasks","*C:\\QA\\MonitoringBuku\\Tasks","*../Tasks","*Main","*C:\\QA\\MonitoringBuku\\Tasks\\main.robot","*../Tasks/main.robot","*<p>Real website scraping + validation + reporting workflow\x3c/p>","*Run Real Price Monitoring Workflow"]);
+window.output["strings"] = window.output["strings"].concat(["*","*MonitoringBuku","*C:\\QA\\MonitoringBuku","*..","*Tasks","*C:\\QA\\MonitoringBuku\\Tasks","*../Tasks","*Main","*C:\\QA\\MonitoringBuku\\Tasks\\main.robot","*../Tasks/main.robot","*<p>Real website scraping + validation + reporting workflow\x3c/p>","*Run SimpleCategoryScraping"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tasks","pass":1,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"MonitoringBuku","name":"MonitoringBuku","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"id":"s1-s1","label":"MonitoringBuku.Tasks","name":"Tasks","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"id":"s1-s1-s1","label":"MonitoringBuku.Tasks.Main","name":"Main","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:08:24","fail":0,"label":"All Tasks","pass":1,"skip":0}],[],[{"elapsed":"00:08:26","fail":0,"id":"s1","label":"MonitoringBuku","name":"MonitoringBuku","pass":1,"skip":0},{"elapsed":"00:08:26","fail":0,"id":"s1-s1","label":"MonitoringBuku.Tasks","name":"Tasks","pass":1,"skip":0},{"elapsed":"00:08:26","fail":0,"id":"s1-s1-s1","label":"MonitoringBuku.Tasks.Main","name":"Main","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1764824198544;
+window.output["baseMillis"] = 1764929059606;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11842;
+window.output["generated"] = 512436;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
